--- a/assets/style.css
+++ b/assets/style.css
@@ -81,11 +81,14 @@ body {
 }
 .about-me__introduction {
 	font-family: 'Spectral';
+	font-size: 16px;
 	font-weight: 800;
 	font-style: italic;
+	line-height: 1.2;
 	width: 60%;
+	margin-bottom: 0.5rem;
 }
-#about-me p {
+.about-me__paragraphe {
 	width: 80%;
 	font-size: 14px;
 }
@@ -93,7 +96,8 @@ body {
 #gallery {
 	/*	min-height: 100vh; */
 }
-.title{
+.title {
+	font-size: calc(1.3rem + 0.6vw);
 	text-align: center;
 	padding-block: 2em;
 }
@@ -145,9 +149,10 @@ body {
 }
 .quote__text {
 	font-family: Spectral;
+	font-size: calc(1.375rem + 1.5vw);
 	font-style: italic;
 	font-weight: 300;
-
+	line-height: 1.2;
 }
 .quote__author {
 	font-family: Spectral;
@@ -201,6 +206,11 @@ body {
 #contact .container {
 	display: flex;
 }
+#contact .title {
+	padding-block: 0;
+	text-align: left;
+}
+
 .picture.right::before {
 	content: ' ';
 	background-color: #BEB45A;
